[EFL][WK2] Regression(138462) Sometimes garbage in snapshots https://bugs.webkit.org/show_bug.cgi?id=105803

Patch by Viatcheslav Ostapenko <sl.ostapenko@samsung.com> on 2012-12-27
Reviewed by Kenneth Rohde Christiansen.

Instead of creating temporary buffer and then creating cairo surface
from it, create cairo surface 1st and use surface image internal buffer
to read pixels from GL buffer.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::takeSnapshot):
* UIProcess/API/efl/SnapshotImageGL.cpp:
(getImageSurfaceFromFrameBuffer):
* UIProcess/API/efl/SnapshotImageGL.h:

Canonical link: https://commits.webkit.org/124002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138518 268f45cc-cd09-0410-ab3c-d52691b4dbfc